--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
-<h1>Welcome to One Big Crew!</h1>
-<p>
-  <%= link_to "Sign Up Now!", '#' %>
-</p>
+<div class="center hero-unit">
+    <h1>Welcome! </h1>
+    <p>to <%= link_to 'One Big Crew',  "http://www.onebigcrew.com" %>
+     </p>
+
+    <p> <%= link_to 'Sign up now!',  "#" , class: "btn btn-large btn-primary" %> </p>
+</div>
