--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,5 +3,8 @@
     <p>to <%= link_to 'One Big Crew',  "http://www.onebigcrew.com" %>
      </p>
 
-    <p> <%= link_to 'Sign up now!',  "#" , class: "btn btn-large btn-primary" %> </p>
+    <p> 
+		<%= link_to "Sign Up Now!", new_user_registration_path , 
+		class: "btn btn-primary btn-large" %>
+	</p>
 </div>
