Add Projects Scaffold

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -7,6 +7,8 @@
   <td><%= project.startdate %></td>
   <td><%= project.schedule_info %></td>
   <td><%= link_to 'Show', project %></td>
+<% if current_user == project.user %>
   <td><%= link_to 'Edit', edit_project_path(project) %></td>
   <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+<% end %>
 </tr>
