--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -38,8 +38,9 @@
   				<%= @project.schedule_info %>
 			</p>
 
-
-			<%= link_to 'Edit', edit_project_path(@project) %> |
+			<% if current_user == @project.user %>
+				<%= link_to 'Edit', edit_project_path(@project) %> |
+			<% end %>
 			<%= link_to 'Back', projects_path %>
 		</div>
 	</div>
