--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -25,4 +25,6 @@
 
 <br />
 
-<%= link_to 'New Project', new_project_path %>
+<% if user_signed_in? %> 
+	<%= link_to 'New Project', new_project_path %>
+<% end %>
