Add Profile Scaffold and Associations

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,9 @@
       	<ul class="nav pull-right">
 			
 		<% if user_signed_in? %>
-			<li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+			<li><%= link_to "Manage Projects", projects_path %></li>
+			<li><%= link_to "Edit My Profile", edit_profile_path(current_user.profile) %></li>
+			<li><%= link_to "Change Account", edit_user_registration_path %></li>
 			<li>
 			<%= link_to "Logout", destroy_user_session_path, method: :delete %>
 			</li>
