Fix profiles controller. Edit _header to add profile control

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,8 +19,12 @@
 			
 		<% if user_signed_in? %>
 			<li><%= link_to "Manage Projects", projects_path %></li>
-			<li><%= link_to "Edit My Profile", edit_profile_path(current_user.profile) %></li>
-			<li><%= link_to "Change Account", edit_user_registration_path %></li>
+			<% if current_user.profile.nil?%>
+				<li><%= link_to "Create A Profile", new_profile_path %></li>
+			<% else %>
+				<li><%= link_to "Edit My Profile", edit_profile_path(current_user.profile) %></li>
+			<% end %>
+			<li><%= link_to "Edit Account", edit_user_registration_path %></li>
 			<li>
 			<%= link_to "Logout", destroy_user_session_path, method: :delete %>
 			</li>
