--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <%= tag :meta, name: "viewport", content: "width=device-width, initial-scale=1.0" %>
 <head>
-  <title>Mockupdb</title>
+  <title>One Big Crew</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
